    dictionary<string, string>.
  * ObjectPropertySerializer now supports serialization of a root-level collection of primitives (not a property)
    when value collation is enabled ("[]" is used as the dictionary key).
  * Added a Breadcrumbs collection that can be used to capture diagnostic/trace information.


09 May 2022
Version 5.5.0 / 5.5.1
======================================================================================================================
AllOverIt.Serialization
  * Added missing TryGetValues() and GetValues() on JsonHelperBase


09 May 2022
Version 5.5.0
======================================================================================================================
AllOverIt
  * Added IsNotNullOrEmpty() to string extensions

AllOverIt.Validation
  * Added ContainsModelRegistration() to IValidationRegistry
  * Added support for async validation and assertion

AllOverIt.Serialization
AllOverIt.Serialization.NewtonsoftJson
AllOverIt.Serialization.SystemTextJson
  * Added TryGetValues() and GetValues() to ElementDictionaryExtensions
  * Improvements to JsonHelper and NestedDictionaryConverter to better handle case-insenstive property querying
    (NestedDictionaryConverter is now internal)


26 Apr 2022
Version 5.4.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Unsealed SchemaTypeAttribute and SchemaInputAttribute


26 Apr 2022
Version 5.4.0
======================================================================================================================
AllOverIt
  * Added support to concat dictionaries

AllOverIt.Aws.Cdk.AppSync
  * Updated SchemaScalarAttribute to support namespace-based name creation
  * Added support to SchemaEnumAttribute to support namespace-based name creation


26 Apr 2022
Version 5.3.1
======================================================================================================================